@@ -1,5 +1,10 @@
 2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): Fix RAID10 logic for
+	>= 6 drives.
+
+2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/i386/netbsd_bootinfo.h (grub_netbsd_btinfo_bootwedge):
 	Fix declaration.
 
